CAY-1632 CayenneModeler: flattened relationship paths are not fully displayed
CAY-1648 [PATCH] ValidationException throws format exception if error message contains percent sign
CAY-1694 When importing an EOModel, the DataNode gets lost
CAY-1696 Undo/Redo stop working after deleting several project items at once
CAY-1697 Error on Save after importing database
CAY-1702 Excessive Selection action is generated when selecting datanode
CAY-1703 NPE on selecting default datasource value

----------------------------------
Release: 3.1 M3
Date: 
----------------------------------
Changes/New Features Since 3.1M2:

CAY-943 Support multiple cayenne.xml files in the project
CAY-1266 Joint prefetches with fetch limit and offset do not work on Oracle
CAY-1461 CayenneModeler: remove ScopeMVC dependency - ObjRelationshipInfoDialog
CAY-1556 Add path construction feature to make constructing paths from constants easier for queries and orderings
CAY-1525 CharType: don't trim spaces on the left
CAY-1537 Implement ObjectContext local caches as NestedQueryCache over the shared cache
CAY-1544 Remove jdk1.6 module from Cayenne sources
CAY-1545 cayenne-lifecycle Referenceable handler refactoring
CAY-1547 cayenne-lifecycle: support for setting UuidRelationships
CAY-1549 Migrate BatchQueryBuilderFactory to DI
CAY-1553 cayenne-lifecycle: @SortWeight annotation 
CAY-1573 QueryLogger to DI JdbcEventLogger migration
CAY-1584 Improve Cayenne modeler re-ordering named query in the cayenne map xml
CAY-1586 New extension point: a strategy for retaining objects in the ObjectStore
CAY-1590 DDL generation without a live datasource
CAY-1594 DI extension point: turning on/off cross-ObjectContext synchronization
CAY-1595 EHCache implementation of Provider<QueryCache>
CAY-1598 Per DataMap listeners are called for all entities in DataDomain
CAY-1599 Annotation-based global listeners registration
CAY-1605 Switch Cayenne to use unified Maven repository